# dragon

./: .gitignore  CMakeLists.txt  build-cb.sh  build-gmake.sh  build-linux.sh  build-mingw.bat  build-nmake.bat  build-vc10.bat  build-windows.bat  release-linux.sh
dep/: .gitignore
dep/SDL2-2.0.1/: CMakeLists.txt
dragon/: logger.c  logger.h  main.c
